# current_denoising

./: README.md  pyproject.toml
.github/workflows/: format.yml  it.yml  ut.yml
docs/current_denoising/: README.md
docs/current_denoising/generation/: ioutils.md  quilting.md
src/current_denoising/: __init__.py
src/current_denoising/denoising/: data.py  inference.py  model.py  train.py
src/current_denoising/generation/: applying_noise.py  dcgan.py  ioutils.py  mdt.py  quilting.py
src/current_denoising/plotting/: img_validation.py  maps.py  training.py
src/current_denoising/utils/: util.py
src/notebooks/: direct_mdt_denoising.ipynb  gan.ipynb  noise_tile_illustrations.ipynb  pathfinding.ipynb  plot_changing_currents.ipynb  plot_tile_rms.ipynb  quilting.ipynb  read_dat.ipynb
src/notebooks/explanatory_notebooks/: 1_data_selection.ipynb  2_train_gan.ipynb  3_train_denoiser.ipynb  README.md
src/tests/it/: README.md  test_data.py  test_denoiser.py  test_gan.py
src/tests/ut/: test_applying_noise.py  test_io.py  test_mdt.py  test_plotting.py  test_quilting.py  test_util.py
