[project]
name = "current-denoising"
version = "0.1.0"
description = "Synthetic data generation, application and removal for MDT data"
readme = "README.md"
authors = [
    { name = "Richard Lane", email = "mh19137@bristol.ac.uk" }
]

requires-python = ">=3.10"
dependencies = [
]

[tool.uv]
default-groups = ["core", "test"]

[dependency-groups]
# Core dependencies - things you need to actually run the code
core = [
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torcheval>=0.0.7",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
]

# Test dependencies - a minimal set of dependencies that let us run the tests
# This enables us to run tests without installing all the dependencies, which is much quicker
# Basically this just gets us to avoid installing torch
# Ideally we wouldn't repeat these things in the core dependencies
# But i need to figure out how to do it better
test = [
    "numpy>=2.2.6",
    "pytest>=8.4.1",
    "scikit-image>=0.25.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.2",
]

# Formatting, linting, etc.
# Useful for development, but not required to run the code
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
    "nbdime>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
